# mcp-clipboardify

./: .gitignore  .importlinter  .pre-commit-config.yaml  .radon  .vulture-whitelist  CHANGELOG.md  README.md  conftest.py  pylint-report.json  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
docs/: api_reference.md  architecture.md  development_guide.md  platform_guide.md  troubleshooting.md
scripts/: publish_production.py  publish_test.py  verify_installation.py  verify_installation.sh
src/mcp_clipboard_server/: __init__.py  __main__.py  _clipboard_utils.py  _errors.py  _logging_config.py  _mcp_handler.py  _protocol_types.py  _tool_schemas.py  _validators.py  _version.py  cli.py  clipboard.py  errors.py  logging_config.py  mcp_handler.py  protocol.py  protocol_types.py  server.py  tool_schemas.py  tools.py  validators.py
tests/: test_clipboard.py  test_e2e.py  test_integration.py  test_mcp_integration.py  test_platform_specific.py  test_protocol.py  test_server.py  test_tools.py
tests/fixtures/: sample_requests.json
