[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mcp-clipboard-server"
version = "1.0.0"
description = "MCP server providing clipboard access tools for AI assistants and automation workflows"
authors = ["MCP Clipboard Server Contributors"]
maintainers = ["MCP Clipboard Server Contributors"]
readme = "README.md"
homepage = "https://github.com/fluffypony/mcp-clipboardify"
repository = "https://github.com/fluffypony/mcp-clipboardify"
documentation = "https://github.com/fluffypony/mcp-clipboardify/blob/main/README.md"
license = "MIT"
keywords = ["mcp", "clipboard", "ai", "automation", "json-rpc", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: System Shells",
    "Topic :: Utilities",
]
packages = [{include = "mcp_clipboard_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-timeout = "^2.1.0"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.6.0"
pylint = "^3.3.7"
import-linter = "^2.3"
radon = "^6.0.1"

[tool.poetry.scripts]
mcp-clipboard-server = "mcp_clipboard_server.__main__:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fluffypony/mcp-clipboardify/issues"
"Changelog" = "https://github.com/fluffypony/mcp-clipboardify/blob/main/CHANGELOG.md"

# Repository configuration for PyPI publishing
[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "explicit"

# Pytest configuration
[tool.pytest.ini_options]
timeout = 30
